<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants">

    <EditText
        android:id="@+id/searchField"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/defaultSearchFieldTxt"
        />
    <!--top buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchField"
        android:id="@+id/topLayout">
        <Button
            android:id="@+id/searchButton"
            android:layout_width="0dp"
            android:layout_height="50dp"

            android:layout_alignParentRight="true"
            android:text="@string/searchBtnTxt"
            android:layout_weight="0.5"
            android:onClick="findAlphabetical"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/addName"
            android:layout_alignParentLeft="true"
            android:text="@string/addNameTxt"
            android:layout_weight="0.5"
            android:onClick="addInAlpabetOrder"
            />
    </LinearLayout>
    <!--message box-->

    <!--fragment for list view of contestants or winners-->
    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.anderson.daniel.randomdrawing.ContestantsFragment"
        android:id="@+id/fragment"
        android:layout_below="@+id/topLayout"
        android:layout_centerHorizontal="true"
        tools:layout="@layout/fragment_contestants" />


    <!--bottom buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/clearDrawing"
            android:layout_alignParentLeft="true"
            android:text="@string/clearListTxt"
            android:layout_weight="0.5"
            android:onClick="clearContestantList"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/drawName"
            android:layout_alignParentRight="true"
            android:text="@string/drawNameTxt"
            android:layout_weight="0.5"
            android:onClick="pickRandomWiner"
            />
    </LinearLayout>




</RelativeLayout>